# serverless-axum-cdk-starter

./: Cargo.toml  README.md
cdk/: package-lock.json  package.json
cdk/lib/: cdk-stack.ts
src/: configuration.rs  lib.rs  main.rs  openapi.rs  startup.rs
src/io/: error.rs
src/models/: mod.rs
src/routes/: health_check.rs  mod.rs  rapidoc.rs
src/routes/auth/: current.rs  login.rs  logout.rs  signup.rs
