[package]
name = "demo-lambda"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "demo-lambda"

[dependencies]
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
] }

serde = { version = "1", features = ["derive"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }
chrono = { version = "0.4.23", default-features = false, features = [
  "clock",
  "serde",
] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3.26"
thiserror = "1.0"
async-trait = "0.1"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }

axum = { version = "0.7", features = ["macros"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["trace", "cors"] }

lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
